Fixes alderaan design layout bugs

--- a/frontend/src/app/components/totals-section/totals-section.component.css
+++ b/frontend/src/app/components/totals-section/totals-section.component.css
@@ -14,12 +14,17 @@
   height: 100%;
 }
 
-.mobile-totals-wrapper {
+.small-totals-wrapper {
   margin-top: 89px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 33px;
   width: 345px;
+  height: 100%;
+}
+
+.mobile-totals-wrapper {
+  margin: 89px 15px 33px 15px;
   height: 100%;
 }
 
@@ -60,6 +65,10 @@
   padding: 20px 0;
 }
 
+.metrics-channels-numbers {
+  max-height: 220px;
+}
+
 .metrics-value {
   font-size: 52px;
   font-weight: 500;
@@ -73,7 +82,7 @@
 
 .metrics-line {
   width: 4px;
-  height: 37px;
+  height: 38px;
 }
 
 .line-open {
@@ -144,7 +153,6 @@
 
 .mobile-metrics {
   width: 100%;
-  max-height: 353px;
 }
 
 .mobile-metrics-accounts {
@@ -153,7 +161,6 @@
 }
 
 .mobile-metrics-channels {
-  max-height: 173px;
   padding: 20px 0;
 }
 
@@ -170,17 +177,15 @@
 
 .mobile-metrics-line {
   width: 2px;
-  height: 12px;
+  height: 13px;
 }
 
 .mobile-top {
   width: 100%;
-  max-height: 246px;
 }
 
 .mobile-top-list {
   padding: 19px 37px 20px 15px;
-  max-height: 212px;
 }
 
 .mobile-top-item {
